added more to section

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,600;0,700;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,600;0,700;1,700&display=swap"
+        rel="stylesheet">
     <title>Food network</title>
 </head>
 
@@ -21,7 +22,10 @@
                     <h3>Join our team in Covid Time</h3><button>apply now !</button>
                 </div>
                 <div class="liveLine">
-                    <marquee behavior="" direction=""><h3>ONLINE ORDER FOR COLLECTION AVAILABLE NOW - 10% discount on orders over &#2547;20 | FREE DELIVERY to your home within 3 miles for a minimum order value of &#2547;25</h3></marquee>
+                    <marquee behavior="" direction="">
+                        <h3>ONLINE ORDER FOR COLLECTION AVAILABLE NOW - 10% discount on orders over &#2547;20 | FREE
+                            DELIVERY to your home within 3 miles for a minimum order value of &#2547;25</h3>
+                    </marquee>
                 </div>
             </div>
         </div>
@@ -57,9 +61,14 @@
             <div class="aboutWrapper">
                 <div class="aboutMeta">
                     <h2 class="secName">About Me</h2>
-                    <p>Khatifood is your destination for fresh, organic, and preservative-free fruits, groceries, and culinary items. We do not provide cooked meals, but we are your go-to option for the staple items necessary to conjure up a pleasant and delicious meal.
+                    <p>Khatifood is your destination for fresh, organic, and preservative-free fruits, groceries, and
+                        culinary items. We do not provide cooked meals, but we are your go-to option for the staple
+                        items necessary to conjure up a pleasant and delicious meal.
 
-                        We are partnered up with a variety of brick and mortar stores to make healthy food accessible all over the city. Khatifood’s mission is to encourage people to eat wholesome and high-quality food. To ensure this, We have raised awareness amongst the mass about food adulteration and hygiene.
+                        We are partnered up with a variety of brick and mortar stores to make healthy food accessible
+                        all over the city. Khatifood’s mission is to encourage people to eat wholesome and high-quality
+                        food. To ensure this, We have raised awareness amongst the mass about food adulteration and
+                        hygiene.
                     </p>
 
                     <div><button class="btnStyle"><a href="">Contact me</a></button></div>
@@ -71,6 +80,82 @@
         </div>
     </section>
 
+
+    <!-- my recipies section -->
+    <section id="recipies">
+        <div class="container">
+            <div class="recipiesWrapper">
+                <div class="recipiesTitle">
+                    <h2 class="secName"> My Recipies</h2>
+                    <p>Those are the special items we have made only for you . <br> whice makes you so much happy after
+                        test our some items <br> given bellow</p>
+                </div>
+                <div class="recipiesItems">
+                    <div class="singleBox">
+                        <div class="foodPhoto"><img src="images/food/Project Cover1.jpg" alt="food photo1"></div>
+                        <div class="rMeta">
+                            <h3>basa Fish Fillet</h3>
+                            <p>Enjoy the basa fish fillet which will be steamed perfectly with lemongrass ,lemon and
+                                garlic sauce and herbs .</p>
+                        </div>
+                    </div>
+
+
+                    <div class="singleBox">
+                        <div class="foodPhoto"><img src="images/food/Project Cover5.png" alt="food photo2"></div>
+                        <div class="rMeta">
+                            <h3>basa Fish Fillet</h3>
+                            <p>Enjoy the basa fish fillet which will be steamed perfectly with lemongrass ,lemon and
+                                garlic sauce and herbs .</p>
+                        </div>
+                    </div>
+
+                    <div class="singleBox">
+                        <div class="foodPhoto"><img src="images/food/Project Cover8.png" alt="food photo3"></div>
+                        <div class="rMeta">
+                            <h3>basa Fish Fillet</h3>
+                            <p>Enjoy the basa fish fillet which will be steamed perfectly with lemongrass ,lemon and
+                                garlic sauce and herbs .</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+    <!-- traffic update -->
+
+    <section id="traffic">
+        <div class="container">
+            <div class="trafficWrapper">
+                <div class="boxshow">
+                    <div class="singleboxUp">
+                        <h1>700k</h1>
+                        <span>Youtube Subscrivers</span>
+                    </div>
+                    <div class="singleboxUp">
+                        <h1>1.4m</h1>
+                        <span>Instagram followers</span>
+                    </div>
+                    <div class="singleboxUp">
+                        <h1>100k</h1>
+                        <span>drobble Shot Likes</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <!-- footer section -->
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
