footer added and finaly finished my job

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,600;0,700;1,700&display=swap"
         rel="stylesheet">
-    <title>Food network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/1de5dc0ac0.js" crossorigin="anonymous"></script>
+    <title>Khati Khabar</title>
 </head>
 
 <body>
@@ -44,7 +49,7 @@
                     </p>
 
 
-                    <div><button class="btnStyle"><a href="">Order food</a></button></div>
+                    <div><button class="btnStyle"><a target="_blank" href="https://www.facebook.com/mdtofayel.chowdhury.79">Order food</a></button></div>
                 </div>
                 <div class="introPhoto">
                     <img src="images/tofayelBG.png" alt="tofayel-photo">
@@ -61,7 +66,7 @@
             <div class="aboutWrapper">
                 <div class="aboutMeta">
                     <h2 class="secName">About Me</h2>
-                    <p>Khatifood is your destination for fresh, organic, and preservative-free fruits, groceries, and
+                    <p>KHATIKHABAR is your destination for fresh, organic, and preservative-free fruits, groceries, and
                         culinary items. We do not provide cooked meals, but we are your go-to option for the staple
                         items necessary to conjure up a pleasant and delicious meal.
 
@@ -71,7 +76,7 @@
                         hygiene.
                     </p>
 
-                    <div><button class="btnStyle"><a href="">Contact me</a></button></div>
+                    <div><button class="btnStyle"><a target="_blank" href="https://www.facebook.com/mdtofayel.chowdhury.79">Contact me</a></button></div>
                 </div>
                 <div class="aboutPhoto">
                     <img src="images/myAbout.png" alt="aboutPhoto">
@@ -151,11 +156,58 @@
 
 
 
-    <!-- footer section -->
 
-    <footer>
+    <!--fotter start from now-->
+
+    <footer id="contact">
+        <div class="container">
+            <div class="footerWarapper">
+
+                <div class="footersingleBox">
+                    <h1 class="logoLite">Khati Khabar</h1>
+                </div>
+                <div class="footersingleBox">
+
+                    <h2>OPENING HOURS</h2>
+
+                    <div class="metabody">
+                        <p>OPEN 7 DAYS A WEEK<br />
+                            (including bank holidays)</p>
+
+                        <div><span>Lunch</span><span>12:00 pm - 02:00 pm</span><br /></div>
+                        <div><span>Dinner</span><span>05:30 pm - 11:00 pm</span></div>
+
+                    </div>
+                </div>
+
+                <div class="footersingleBox">
+
+                    <h2>CONTACT US</h2>
+
+                    <div class="meta_info">
+                        <div class="loca1"><span><i class="fas fa-map-marked-alt"></i></span><span>1-2 Market Square,
+                                HORITOLA BAZAR</span></div>
+                        <div class="pho2"><span><i class="fas fa-phone-volume"></i></span><span> 01420 571 666</span>
+                        </div>
+                        <div class="fa1"><span><i class="fab fa-facebook-f"></i></span><span><a target="_blank" href="https://www.facebook.com/mdtofayel.chowdhury.79">Facebook</a></span></div>
+                        <div class="trip1"><span><i class="fab fa-tripadvisor"></i></span><span> Tripadvisor</span>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+            <h4 class="copyrightLine">Copyright Ⓒ 2021 CODER TOFAYEL. All Rights Reserved.</h4>
+        </div>
+
 
     </footer>
+
+
+
+
+
 </body>
 
 </html>
